[metadata]
name = argparse_types
version = 0.0.0
long_description = README.md
long_description__content_type = text/markdown
url = https://github.com/tech-chad/
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
py_modules = argparse_types
install_requires:
    importlib-metadata>=1.6
    importlib-resources>=1.5
python_requires = >= 3.6.1

[options.packages.find]
exclude =
    tests*
    tests
