[metadata]
name = argparse_types
version = 0.1.0
description = addition types to use with argparse
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/argparse_types
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = argparse_types
python_requires = >= 3.6.1

[options.packages.find]
exclude =
    tests*
    tests
